// Vitest Snapshot v1

exports[`Popconfirm > Popconfirm baseVue demo works fine 1`] = `
<div
  class="popconfirm-demo"
  data-v-cf08ffd0=""
>
  <div
    class="tdesign-demo-block"
    data-v-cf08ffd0=""
  >
    <div
      class="demo-item"
      data-v-cf08ffd0=""
    >
      
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-primary"
        data-v-cf08ffd0=""
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          删除订单
          
        </span>
      </button>
      <!---->
      
    </div>
    <!-- 受控用法：自由控制浮层显示与否 -->
    <div
      class="demo-item"
      data-v-cf08ffd0=""
    >
      
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-primary"
        data-v-cf08ffd0=""
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          提交审核
          
        </span>
      </button>
      <!---->
      
    </div>
  </div>
</div>
`;

exports[`Popconfirm > Popconfirm buttonVue demo works fine 1`] = `
<div
  class="popconfirm-demo"
  data-v-26a50f8e=""
>
  <!-- 和 Dialog/Drawer 组件的确认/取消 逻辑一样 -->
  <div
    class="tdesign-demo-block"
    data-v-26a50f8e=""
  >
    <!-- 使用 props 定义按钮内容 -->
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      data-v-26a50f8e=""
      type="button"
    >
      <span
        class="t-button__text"
      >
        
        按钮样式（属性-字符串）
        
      </span>
    </button>
    <!---->
    
    <!-- 通过透传按钮属性自定义按钮，cancelBtn 和 confirmBtn 值为 null 时表示不显示该按钮 -->
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      data-v-26a50f8e=""
      type="button"
    >
      <span
        class="t-button__text"
      >
        
        按钮样式（属性-对象）
        
      </span>
    </button>
    <!---->
    
    <!-- 使用插槽定义按钮内容 -->
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      data-v-26a50f8e=""
      type="button"
    >
      <span
        class="t-button__text"
      >
        
        按钮样式（插槽）
        
      </span>
    </button>
    <!---->
    
  </div>
</div>
`;

exports[`Popconfirm > Popconfirm describeVue demo works fine 1`] = `
<div
  class="popconfirm-demo"
  data-v-1b7718dc=""
>
  <div
    class="tdesign-demo-block"
    data-v-1b7718dc=""
  >
    <div
      class="demo-item"
      data-v-1b7718dc=""
    >
      
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-primary"
        data-v-1b7718dc=""
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          自定义浮层内容
          
        </span>
      </button>
      <!---->
      
    </div>
    <div
      class="demo-item"
      data-v-1b7718dc=""
    >
      
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-warning"
        data-v-1b7718dc=""
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          自定义浮层内容
          
        </span>
      </button>
      <!---->
      
    </div>
  </div>
</div>
`;

exports[`Popconfirm > Popconfirm iconVue demo works fine 1`] = `
<div
  class="popconfirm-demo"
  data-v-59c8bc80=""
>
  <div
    class="tdesign-demo-block"
    data-v-59c8bc80=""
  >
    <div
      class="demo-item"
      data-v-59c8bc80=""
    >
      
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-primary"
        data-v-59c8bc80=""
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          默认
          
        </span>
      </button>
      <!---->
      
    </div>
    <div
      class="demo-item"
      data-v-59c8bc80=""
    >
      
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-warning"
        data-v-59c8bc80=""
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          警告
          
        </span>
      </button>
      <!---->
      
    </div>
    <div
      class="demo-item"
      data-v-59c8bc80=""
    >
      
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-danger"
        data-v-59c8bc80=""
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          危险
          
        </span>
      </button>
      <!---->
      
    </div>
  </div>
  <br
    data-v-59c8bc80=""
  />
  <br
    data-v-59c8bc80=""
  />
  <div
    class="tdesign-demo-block"
    data-v-59c8bc80=""
  >
    <div
      class="demo-item"
      data-v-59c8bc80=""
    >
      
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        data-v-59c8bc80=""
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          自定义图标（插槽）
          
        </span>
      </button>
      <!---->
      
    </div>
    <div
      class="demo-item"
      data-v-59c8bc80=""
    >
      
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        data-v-59c8bc80=""
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          自定义图标（属性）
          
        </span>
      </button>
      <!---->
      
    </div>
  </div>
</div>
`;

exports[`Popconfirm > Popconfirm inheritVue demo works fine 1`] = `
<div
  class="popconfirm-demo"
  data-v-c48496f8=""
>
  <!-- 可以使用 popupProps.placement 控制弹出方向 -->
  <div
    class="tdesign-demo-block"
    data-v-c48496f8=""
  >
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      data-v-c48496f8=""
      type="button"
    >
      <span
        class="t-button__text"
      >
        
        浮层出现在下方
        
      </span>
    </button>
    <!---->
    
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      data-v-c48496f8=""
      type="button"
    >
      <span
        class="t-button__text"
      >
        
        浮层出现在右侧
        
      </span>
    </button>
    <!---->
    
  </div>
</div>
`;
